2007-06-03  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-client.c: fixed gda_client_find_connection() where the first existing
	connection was always returned regardless of the requested DSN
	* libgda/gda-parameter.c: make gda_parameter_get_value_str() return NULL if
	parameter's value is NULL
	* libgda/gda-data-model.c: correctly display multiline strings in any column when using
	gda_data_model_dump_as_string()
	* tools/gda-sql.c: 
	* tools/command-exec.c:
	  - added commands (\set, \unset, \H)
	  - correclty set dictionary after each connection change

2007-05-31  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-data-proxy.c: added a "defer_sync" property to control if the synchronization
	between GdaDataProxy object and proxied model should be immediate of defered into an 
	idle loop (the latter being the default)
	* tools/Makefile.am:
	* tools/gda-run.c: removed useless program
	* tools/tools-input.[ch]: make readline handle process signals
	* tools/command-exec.c:
	* tools/gda-sql.c: 
	  - added new internal commands (\q, \cd, \copyright, \e, \r, \p, \g, \w, \w_dict, 
	    \r_dict, \dq)
	  - handle correctly the SIGINT signal,
	  - correctly behave when stdin and/or stdout are streams and not attached to a terminal,
	  - output large results as several pages using a pager, 
	  - output can be sent to a file or to a piped program (using the "|prog" syntax)
	  - history can be saved to a file

2007-05-28  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-config.c: change URL to DB_DIR and DB_NAME in the SalesTest example
	DSN (this change was made some time ago in the SQLite provider), to avoid warnings
	* libgda/gda-data-model.c: disabled debug info
	* tools/Makefile.am:
	* tools/command-exec.[ch]:
	* tools/tools-input.[ch]:
	* tools/gda-sql.c: new command line tool designed to be similar to the
	PostgreSQL's psql command line

2007-05-28  Hans de Goede <j.w.r.degoede@hhs.nl>

	* providers/ldap/gda-ldap.h: